# NAF

./: .gitignore  README.md  denoising.py  hubconf.py  pyproject.toml  train.py
docs/: EVALUATIONS.md  README.md
naf/config/dataloader/: train.yaml
naf/config/dataset/: ade20k.yaml  cityscapes.yaml  coco.yaml  davis.yaml  imagenet.yaml  kitti360.yaml  voc.yaml
naf/config/loss/: base.yaml
naf/config/model/: anyup.yaml  bilinear.yaml  featup.yaml  ircnn.yaml  jafar.yaml  jbf.yaml  jbu.yaml  naf.yaml  nearest.yaml  rednet.yaml  restormer.yaml
naf/evaluation/: eval_seg_probing.py
naf/src/layers/: attentions.py
naf/src/model/: anyup.py  bilinear.py  featup.py  jafar.py  jbf.py  jbu.py  naf.py  nearest.py
naf/test/: backward_memory.py  backward_speed.py  flops_params.py  forward_memory.py  forward_speed.py
naf/utils/: training.py  wrapper.py
notebooks/: attention_maps.ipynb  inference.ipynb
